<resources>
    <string name="app_name">Movieapp</string>
    <string name="network_error">Connect your phone to internet</string>
    <string name="popular_api">"http://api.themoviedb.org/3/movie/popular?api_key=INSERT_YOUR_API_KEY"</string>
    <string name="toprated_api">"http://api.themoviedb.org/3/movie/top_rated?api_key=INSERT_YOUR_API_KEY"</string>
    <string name="baseurl">"http://image.tmdb.org/t/p/original/"</string>
    <string name="gridview_xml">gridview</string>
    <string name="title">title</string>
    <string name="releasedate">releasedate</string>
    <string name="rating">rating</string>
    <string name="information">information</string>
    <string name="imageView">imageView</string>

</resources>
